--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           cli: latest
           bb: latest
-          no-auth: 'false'
+          no-auth: ${{ env.GITHUB_ACTIONS == false }}
 
       # - name: Set up Python
       #   uses: actions/setup-python@v5
