hello-world: Cache brew

--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: macos-latest
 
     steps:
+      - run: echo LOCAL ${{ env.LOCAL }}
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -38,11 +40,6 @@ jobs:
         uses: fwilhe2/setup-kotlin@main
         with:
           install-native: true
-
-      - name: Setup LLVM
-        uses: ZhongRuoyu/setup-llvm@v0
-        with:
-          llvm-version: 17
 
       - name: Setup Fortran
         uses: fortran-lang/setup-fortran@v1
@@ -80,9 +77,20 @@ jobs:
           toolchain: stable
           override: true
 
+      - name: Cache Homebrew
+        uses: actions/cache@v4
+        with:
+          path: |
+            /usr/local/Homebrew
+            /usr/local/Caskroom
+            /Users/${{ runner.user }}/Library/Caches/Homebrew
+          key: ${{ runner.os }}-brew-${{ hashFiles('**/Brewfile') }}
+          restore-keys: |
+            ${{ runner.os }}-brew-
+
       - name: Install various things
         run: |
-          brew install hyperfine lua luajit odin elixir chezscheme mawk gnucobol vlang dart-sdk
+          brew install hyperfine lua luajit odin elixir chezscheme mawk gnucobol llvm vlang dart-sdk
 
       - name: Install .NET SDK
         run: |
